 * Fix: Don't crash when picking a brush preset on Android. Thanks to zetalambo and VeeBeeArt for reporting.
 * Fix: Selections finally no longer sometimes disappear when transforming them. Thanks to Spuzzy, Xan and xxxx for reporting.
 * Feature: Capture volume rocker on Android and bind it to undo and redo by default. Thanks to cl for suggesting.

2023-08-26 Version 2.2.0-beta.7
 * Fix: Make classic brushes not go brighter when smudging into transparency. Thanks to cada for reporting.
 * Feature: "Ratchet" canvas rotation shortcut, using Alt+Shift by default. Rotates the canvas in 15° increments. Thanks to Kvothen for suggesting.
 * Fix: Don't filter out undo depth messages when playing back recordings.
 * Fix: Make floating docks restore properly again. Thanks SnazComic for reporting.
 * Fix: Don't show tag options when right-clicking on a brush preset. Thanks Blozzom for reporting.
 * Fix: Properly disable blend mode combo box in layer properties dialog. Thanks xxxx for reporting.
 * Fix: Move chat status bar button into a legal position. Thanks Flz for reporting.
 * Fix: Correct various errors in text recording reading and writing.
 * Fix: Don't keep locally forked canvas states around. This reduces memory usage by a bunch, especially when drawing locally.
 * Feature: Add layer on current key frame button is now in the top bar of the timeline, next to the other key frame buttons. Thanks FallenArts for suggesting.
 * Feature: Show a notice when there's no tracks yet, rather than just showing an empty timeline grid.
 * Fix: Actually pick color when adding a color to the color picker through the color dialog.
 * Feature: Mark window when a chat message is received. On Windows, this makes the icon in the task bar orange. On macOS, it supposedly bounces an icon somewhere. On other platforms it probably does something similar, indicating which window is the one that got a message ready. Thanks Radio for suggesting.