@@ -473,6 +473,9 @@
      <property name="text">
       <string notr="true">Lock reason text goes here.</string>
      </property>
+     <property name="textFormat">
+      <enum>Qt::RichText</enum>
+     </property>
      <property name="wordWrap">
       <bool>true</bool>
      </property>
